update build path

--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "type": "module",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
-    "build": "bun build src/index.ts --minify --compile --sourcemap --outfile ./build/app",
-    "start": "./build/app"
+    "build": "bun build src/index.ts --minify --compile --sourcemap --outfile ./app",
+    "start": "./app"
   },
   "devDependencies": {
     "@types/bun": "latest"
