--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "type": "module",
   "scripts": {
     "dev": "bun run --hot src/index.ts",
-    "build": "bun build src/index.ts --minify --compile --sourcemap --outfile ./app",
+    "build": "bun build src/index.ts --minify --compile --sourcemap --outfile ./build/app",
     "start": "./app"
   },
   "devDependencies": {
